refactor code structure.\nTake care of the thread life cycle. Now the threads are nice and clean